fix z-index

--- a/packages/editor/src/plugins/FloatingLinkEditorPlugin/index.css
+++ b/packages/editor/src/plugins/FloatingLinkEditorPlugin/index.css
@@ -3,7 +3,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 100;
   max-width: 400px;
   width: 100%;
   opacity: 0;
